引入锅巴汉化

--- a/lunarian.html
+++ b/lunarian.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="lunarian.css">
 </head>
 <body onload="loadLunarian()">
+    <script src="lib/chs.js"></script>
+    <script src="lib/core.js"></script>
     <div id="lunar_ui">
         <div id="canvas_images"></div>
         <canvas id="map_canvas"></canvas>
