--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="loadGame()">
+    <script src="lib/chs.js"></script>
+    <script src="lib/core.js"></script>
     <input id="copy" style="position: absolute; top: 0; left: 0; user-select: all; visibility: hidden;">
     <div id="fog"></div>
     <div id="app" style="display: none;">
